core: rename everyting from rbdpvc to mantle
We changed the name of this tool. Let's change the corresponging
resources, apis, variables, and so on.

In addition, use the local-downloaded kubectl on the top directory's Makefile.

Signed-off-by: Satoru Takeuchi <satoru.takeuchi@gmail.com>

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: rook-ceph
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: rbd-backup-system-
+namePrefix: mantle-
 
 # Labels to add to all resources and selectors.
 #labels:
