--- a/config/rbac/mantlebackup_viewer_role.yaml
+++ b/config/rbac/mantlebackup_viewer_role.yaml
@@ -1,24 +1,27 @@
+# permissions for end users to view mantlebackups.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: proxy-role
-    app.kubernetes.io/component: kube-rbac-proxy
+    app.kubernetes.io/instance: mantlebackup-viewer-role
+    app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: mantle
     app.kubernetes.io/part-of: mantle
     app.kubernetes.io/managed-by: kustomize
-  name: proxy-role
+  name: mantlebackup-viewer-role
 rules:
 - apiGroups:
-  - authentication.k8s.io
+  - mantle.cybozu.io
   resources:
-  - tokenreviews
+  - mantlebackups
   verbs:
-  - create
+  - get
+  - list
+  - watch
 - apiGroups:
-  - authorization.k8s.io
+  - mantle.cybozu.io
   resources:
-  - subjectaccessreviews
+  - mantlebackups/status
   verbs:
-  - create
+  - get
