--- a/config/samples/mantle_v1_mantlebackup.yaml
+++ b/config/samples/mantle_v1_mantlebackup.yaml
@@ -66,15 +66,15 @@ spec:
       storage: 1Gi
   storageClassName: rook-ceph-block
 ---
-apiVersion: backup.cybozu.com/v1
-kind: RBDPVCBackup
+apiVersion: mantle.cybozu.io/v1
+kind: MantleBackup
 metadata:
   labels:
-    app.kubernetes.io/name: rbdpvcbackup
-    app.kubernetes.io/instance: rbdpvcbackup-sample
-    app.kubernetes.io/part-of: rbd-backup-system
+    app.kubernetes.io/name: mantlebackup
+    app.kubernetes.io/instance: mantlebackup-sample
+    app.kubernetes.io/part-of: mantle
     app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/created-by: rbd-backup-system
-  name: rbdpvcbackup-sample
+    app.kubernetes.io/created-by: mantle
+  name: mantlebackup-sample
 spec:
   pvc: pvc-sample
