--- a/e2e/testdata/values-cluster.yaml
+++ b/e2e/testdata/values-cluster.yaml
@@ -1,41 +1,14 @@
-kind: StorageClass
-apiVersion: storage.k8s.io/v1
-metadata:
-  name: manual
-provisioner: kubernetes.io/no-provisioner
-volumeBindingMode: WaitForFirstConsumer
----
-kind: PersistentVolume
-apiVersion: v1
-metadata:
-  name: local-osd
-  labels:
-    type: local-osd
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 5Gi
-  accessModes:
-    - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain
-  volumeMode: Block
-  local:
-    path: /dev/loop6
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - minikube-worker
----
-apiVersion: ceph.rook.io/v1
-kind: CephCluster
-metadata:
-  name: rook-ceph
-  namespace: rook-ceph # namespace:cluster
-spec:
+operatorNamespace: rook-ceph
+
+cephBlockPools: []
+cephFileSystems: []
+cephObjectStores: []
+
+toolbox:
+  enabled: true
+  resources: null
+
+cephClusterSpec:
   dataDirHostPath: /var/lib/rook
   mon:
     count: 1
@@ -97,3 +70,4 @@ spec:
               accessModes:
                 - ReadWriteOnce
     onlyApplyOSDPlacement: false
+  resources: null
