--- a/e2e/testdata/rbd-pool-sc-template.yaml
+++ b/e2e/testdata/rbd-pool-sc-template.yaml
@@ -12,7 +12,7 @@ spec:
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: rook-ceph-block
+  name: %s
 provisioner: rook-ceph.rbd.csi.ceph.com
 parameters:
   clusterID: rook-ceph
