add PVC/PVManifests field to MantleBackup resource
Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlebackups.yaml
+++ b/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlebackups.yaml
@@ -123,6 +123,12 @@ spec:
                 description: '''createdAt'' specifies the creation date and time'
                 format: date-time
                 type: string
+              pvManifest:
+                description: '''pvManifest'' saving backup target PV manifest'
+                type: string
+              pvcManifest:
+                description: '''pvcManifest'' saving backup target PVC manifests'
+                type: string
             type: object
         type: object
     served: true
