add MantleRestore resource
Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -21,6 +21,32 @@ rules:
   - list
   - watch
 - apiGroups:
+  - backup.cybozu.io
+  resources:
+  - mantlerestores
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - backup.cybozu.io
+  resources:
+  - mantlerestores/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - backup.cybozu.io
+  resources:
+  - mantlerestores/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
   - ""
   resources:
   - configmaps
