--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,6 +3,7 @@
 # It should be run by config/default
 resources:
 - bases/mantle.cybozu.io_mantlebackups.yaml
+- bases/backup.cybozu.io_mantlerestores.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -14,6 +15,7 @@ patches:
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- path: patches/cainjection_in_mantlebackups.yaml
+#- path: patches/cainjection_in_mantlerestores.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
