Run `kubebuilder create api --group mantle --version v1 --kind MantleBackupConfig` and `make`
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -2,4 +2,5 @@
 resources:
 - mantle_v1_mantlebackup.yaml
 - mantle_v1_mantlerestore.yaml
+- mantle_v1_mantlebackupconfig.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
