--- a/charts/mantle-cluster-wide/templates/clusterrole.yaml
+++ b/charts/mantle-cluster-wide/templates/clusterrole.yaml
@@ -47,6 +47,32 @@ rules:
   - apiGroups:
       - mantle.cybozu.io
     resources:
+      - mantlebackupconfigs
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
+      - mantle.cybozu.io
+    resources:
+      - mantlebackupconfigs/finalizers
+    verbs:
+      - update
+  - apiGroups:
+      - mantle.cybozu.io
+    resources:
+      - mantlebackupconfigs/status
+    verbs:
+      - get
+      - patch
+      - update
+  - apiGroups:
+      - mantle.cybozu.io
+    resources:
       - mantlebackups
     verbs:
       - create
