--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -9,13 +9,29 @@ rules:
   resources:
   - persistentvolumeclaims
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - ""
   resources:
   - persistentvolumes
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - backup.cybozu.io
+  resources:
+  - mantlerbackup
   verbs:
   - get
   - list
