add status.clusterID to check if the cluster ID matches before delete
And containing fixing RBAC

Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -29,40 +29,6 @@ rules:
   - update
   - watch
 - apiGroups:
-  - backup.cybozu.io
-  resources:
-  - mantlerbackup
-  verbs:
-  - get
-  - list
-  - watch
-- apiGroups:
-  - backup.cybozu.io
-  resources:
-  - mantlerestores
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - backup.cybozu.io
-  resources:
-  - mantlerestores/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - backup.cybozu.io
-  resources:
-  - mantlerestores/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
   - ""
   resources:
   - configmaps
@@ -100,6 +66,40 @@ rules:
   - mantle.cybozu.io
   resources:
   - mantlebackups/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - mantle.cybozu.io
+  resources:
+  - mantlerbackup
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - mantle.cybozu.io
+  resources:
+  - mantlerestores
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - mantle.cybozu.io
+  resources:
+  - mantlerestores/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - mantle.cybozu.io
+  resources:
+  - mantlerestores/status
   verbs:
   - get
   - patch
