use cobra to support subcommands and add controller subcommand
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/charts/mantle/templates/deployment.yaml
+++ b/charts/mantle/templates/deployment.yaml
@@ -58,6 +58,7 @@ spec:
           command:
             - /manager
           args:
+            - controller
             - --leader-elect
           env:
             - name: POD_NAMESPACE
