implement reconciler for MantleBackupConfig
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/charts/mantle/templates/deployment.yaml
+++ b/charts/mantle/templates/deployment.yaml
@@ -60,7 +60,17 @@ spec:
           args:
             - controller
             - --leader-elect
+            {{- with .Values.controller.expireOffset }}
+            - --expire-offset={{ . }}
+            {{- end }}
+            {{- with .Values.controller.overwriteMBCSchedule }}
+            - --overwrite-mbc-schedule={{ . }}
+            {{- end }}
           env:
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
             - name: POD_NAMESPACE
               valueFrom:
                 fieldRef:
