--- a/charts/mantle-cluster-wide/templates/clusterrole.yaml
+++ b/charts/mantle-cluster-wide/templates/clusterrole.yaml
@@ -29,9 +29,29 @@ rules:
       - update
       - watch
   - apiGroups:
+      - batch
+    resources:
+      - cronjobs
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
+  - apiGroups:
       - ""
     resources:
       - configmaps
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - ""
+    resources:
+      - pods
     verbs:
       - get
       - list
