--- a/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlebackupconfigs.yaml
+++ b/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlebackupconfigs.yaml
@@ -11,6 +11,8 @@ spec:
     kind: MantleBackupConfig
     listKind: MantleBackupConfigList
     plural: mantlebackupconfigs
+    shortNames:
+    - mbc
     singular: mantlebackupconfig
   scope: Namespaced
   versions:
@@ -40,10 +42,31 @@ spec:
           spec:
             description: MantleBackupConfigSpec defines the desired state of MantleBackupConfig
             properties:
-              foo:
-                description: Foo is an example field of MantleBackupConfig. Edit mantlebackupconfig_types.go
-                  to remove/update
+              expire:
+                format: duration
                 type: string
+                x-kubernetes-validations:
+                - message: expire must be >= 1d
+                  rule: self >= duration('24h')
+                - message: expire must be <= 15d
+                  rule: self <= duration('360h')
+                - message: spec.expire is immutable
+                  rule: self == oldSelf
+              pvc:
+                type: string
+                x-kubernetes-validations:
+                - message: spec.pvc is immutable
+                  rule: self == oldSelf
+              schedule:
+                pattern: ^\s*([0-5]?[0-9])\s+(0?[0-9]|1[0-9]|2[0-3])\s+\*\s+\*\s+\*\s*$
+                type: string
+              suspend:
+                default: false
+                type: boolean
+            required:
+            - expire
+            - pvc
+            - schedule
             type: object
           status:
             description: MantleBackupConfigStatus defines the observed state of MantleBackupConfig
