--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-    runs-on: "ubuntu-20.04"
+    runs-on: "ubuntu-22.04"
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
@@ -24,10 +24,10 @@ jobs:
       - run: sudo docker rmi $(docker image ls -aq) >/dev/null 2>&1 || true
       - run: sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup /usr/lib/jvm || true
       - run: sudo apt purge -y $(dpkg-query -W | grep nginx | awk '{print $1}')
-      - run: sudo apt purge -y aria2 ansible azure-cli shellcheck rpm xorriso zsync esl-erlang firefox gfortran-8 gfortran-9 google-chrome-stable google-cloud-sdk
+      - run: sudo apt purge -y aria2 ansible azure-cli shellcheck rpm xorriso zsync firefox gfortran-9 google-chrome-stable google-cloud-sdk
       - run: sudo apt purge -y imagemagick libmagickcore-dev libmagickwand-dev libmagic-dev ant ant-optional mercurial apt-transport-https
       - run: sudo apt purge -y mono-complete unixodbc-dev yarn chrpath libxft-dev libfreetype6-dev libfontconfig1 libfontconfig1-dev
-      - run: sudo apt purge -y snmp pollinate libpq-dev postgresql-client powershell ruby-full sphinxsearch subversion mongodb-org azure-cli microsoft-edge-stable
+      - run: sudo apt purge -y snmp pollinate libpq-dev postgresql-client powershell ruby-full sphinxsearch subversion azure-cli
       - run: sudo apt purge -y $(dpkg-query -W | grep dotnet | awk '{print $1}')
       - run: sudo apt autoremove -y >/dev/null 2>&1
       - run: sudo apt autoclean -y >/dev/null 2>&1
