--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -19,18 +19,18 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
-      - run: sudo apt update
-      - run: sudo apt purge -y apport apport-symptoms fwupd nano netplan.io popularity-contest unattended-upgrades update-manager-core snapd
+      - run: sudo apt-get update
+      - run: sudo apt-get purge -y apport apport-symptoms fwupd nano netplan.io popularity-contest unattended-upgrades update-manager-core snapd
       - run: sudo docker rmi $(docker image ls -aq) >/dev/null 2>&1 || true
       - run: sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup /usr/lib/jvm || true
-      - run: sudo apt purge -y $(dpkg-query -W | grep nginx | awk '{print $1}')
-      - run: sudo apt purge -y aria2 ansible azure-cli shellcheck rpm xorriso zsync firefox gfortran-9 google-chrome-stable google-cloud-sdk
-      - run: sudo apt purge -y imagemagick libmagickcore-dev libmagickwand-dev libmagic-dev ant ant-optional mercurial apt-transport-https
-      - run: sudo apt purge -y mono-complete unixodbc-dev yarn chrpath libxft-dev libfreetype6-dev libfontconfig1 libfontconfig1-dev
-      - run: sudo apt purge -y snmp pollinate libpq-dev postgresql-client powershell ruby-full sphinxsearch subversion azure-cli
-      - run: sudo apt purge -y $(dpkg-query -W | grep dotnet | awk '{print $1}')
-      - run: sudo apt autoremove -y >/dev/null 2>&1
-      - run: sudo apt autoclean -y >/dev/null 2>&1
+      - run: sudo apt-get purge -y $(dpkg-query -W | grep nginx | awk '{print $1}')
+      - run: sudo apt-get purge -y aria2 ansible azure-cli shellcheck rpm xorriso zsync firefox gfortran-9 google-chrome-stable google-cloud-sdk
+      - run: sudo apt-get purge -y imagemagick libmagickcore-dev libmagickwand-dev libmagic-dev ant ant-optional mercurial apt-transport-https
+      - run: sudo apt-get purge -y mono-complete unixodbc-dev yarn chrpath libxft-dev libfreetype6-dev libfontconfig1 libfontconfig1-dev
+      - run: sudo apt-get purge -y snmp pollinate libpq-dev postgresql-client powershell ruby-full sphinxsearch subversion azure-cli
+      - run: sudo apt-get purge -y $(dpkg-query -W | grep dotnet | awk '{print $1}')
+      - run: sudo apt-get autoremove -y >/dev/null 2>&1
+      - run: sudo apt-get autoclean -y >/dev/null 2>&1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: cache go dependencies
