--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -31,6 +31,27 @@ jobs:
       - run: sudo apt-get purge -y $(dpkg-query -W | grep dotnet | awk '{print $1}')
       - run: sudo apt-get autoremove -y >/dev/null 2>&1
       - run: sudo apt-get autoclean -y >/dev/null 2>&1
+      - name: "KVM setup"
+        run: |-
+             VIRTUALIZATION_SUPPORT=$(grep -E -q 'vmx|svm' /proc/cpuinfo && echo yes || echo no)
+             echo ${VIRTUALIZATION_SUPPORT}
+             if [ "${VIRTUALIZATION_SUPPORT}" != "yes" ]; then
+               echo "CPU does not support the virtualization feature."
+               exit 1
+             fi
+             sudo apt-get install qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils
+             kvm-ok
+             sudo adduser `id -un` libvirt
+             sudo adduser `id -un` kvm
+             virsh list --all
+             sudo ls -la /var/run/libvirt/libvirt-sock
+             sudo chmod 777 /var/run/libvirt/libvirt-sock
+             sudo ls -la /var/run/libvirt/libvirt-sock
+             ls -l /dev/kvm
+             sudo rmmod kvm_amd
+             sudo rmmod kvm
+             sudo modprobe -a kvm
+             sudo modprobe -a kvm_amd
       - name: cache go dependencies
         uses: actions/cache@v4
         with:
