--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,5 +1,5 @@
 ## Append samples of your project ##
 resources:
-- backup_v1_mantlebackup.yaml
-- backup_v1_mantlerestore.yaml
+- mantle_v1_mantlebackup.yaml
+- mantle_v1_mantlerestore.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
