support shortname mb for MantleBackup
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlebackups.yaml
+++ b/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlebackups.yaml
@@ -11,6 +11,8 @@ spec:
     kind: MantleBackup
     listKind: MantleBackupList
     plural: mantlebackups
+    shortNames:
+    - mb
     singular: mantlebackup
   scope: Namespaced
   versions:
