support gRPC communication between primary and secondary mantle controllers
This commit allows a mantle-controller to serve as one of standalone,
primary, or secondary mode. This commit doesn't have any e2e test's
update and it will land on in the following commits.

Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/charts/mantle/templates/deployment.yaml
+++ b/charts/mantle/templates/deployment.yaml
@@ -60,6 +60,10 @@ spec:
           args:
             - controller
             - --leader-elect
+            - --role={{ .Values.controller.role }}
+            {{- with .Values.controller.mantleServiceEndpoint }}
+            - --mantle-service-endpoint={{ . }}
+            {{- end }}
             {{- with .Values.controller.expireOffset }}
             - --expire-offset={{ . }}
             {{- end }}
@@ -75,6 +79,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+          ports:
+            {{- toYaml .Values.controller.ports | nindent 12 }}
         - command:
             - /bin/bash
             - -c
