move all e2e tests to singlek8s package
All of the e2e tests we currently have are written for a single
Kubernetes cluster. This commit moves them into a `singlek8s` package.

Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -165,4 +165,4 @@ do_test: $(GINKGO)
 	PATH=${PATH} \
 	E2ETEST=1 \
 	KUBECTL=$(KUBECTL) \
-	$(GINKGO) --fail-fast -v $(GINKGO_FLAGS) .
+	$(GINKGO) --fail-fast -v $(GINKGO_FLAGS) singlek8s
